fix for input resizing weird on mobile

--- a/styleIndex.css
+++ b/styleIndex.css
@@ -79,6 +79,12 @@ button[disabled] > span{
     
     }
 }
+@media only screen and (max-width: 980px) {
+   form{
+    padding: 2% 30% 0 30%;
+   }
+ 
+}
 .dashboardLabel{
     padding: 8px 16px;
     background-color: #656c99;
